k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting-app-ingress
  namespace: voting-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /vote(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: vote-service
            port:
              number: 80
      - path: /result(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: result-service
            port:
              number: 80
